# mastermind

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  fpm.toml  mastermind.f90  meson.build  mm_game.f90  rand2003.f90  rand2018.f90  random.f90  test_compilers.sh
.archive/: .appveyor.yml
.github/workflows/: ci_cmake.yml  ci_meson.yml
app/: mastermind.f90
cmake/: compilers.cmake
src/: CMakeLists.txt  input.f90  mastermind.f90  meson.build  mm_game.f90  output.f90  rand2003.f90  rand2018.f90  random.f90  utils.f90
src/tests/: test_compare.f90  test_compilers.sh
test/: test_compare.f90  test_mm.cmake
tests/: test_compare.f90  test_compilers.sh
